# ipk-Uebungen

./: .gitignore  README.md
Uebung2/: .2-1.cpp.un~  .2-2.cpp.un~  .2-3.cpp.un~  2-1.cpp~  2-1.out  2-1.txt  2-2.cpp~  2-2.out  2-3.out  Collatz.cpp  Collatz.cpp~  Fibonacci.txt  Mitternachtsformel.txt  test.out
Uebung3/: Potenzen.cpp  Potenzen.out  nte-Wurzel.out  nte-Wurzel.txt
Uebung4/: Outpufile.txt  Vektoren.out  Vektorena.cpp  Vektorena.out  Vektorenb.cpp  Vektorenc.cpp  Vektorend.cpp  Vektorene.cpp  Vektorene.out  a.out  convex-hull.cpp  convex-hull.out  hull.txt
Uebung5/: CMakeLists.txt  grimm-fables.txt  normal.cpp  readvector.cpp  statistics.cc  statistics.hh  uniform.cpp
Uebung5/Finn/uebung05_min/: Aufgabe_1_normal.cpp  Aufgabe_1_readvector.cpp  Aufgabe_1_uniform.cpp  Aufgabe_3.cpp  CMakeLists.txt  example  maps.cc  maps.hh  statistics.cc  statistics.hh  test_mean.cpp  test_median.cpp  texttest.txt
Uebung5/Finn/uebung05_min/release-build/: Aufgabe_1_normal  Aufgabe_1_readvector  Aufgabe_1_uniform  CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_mean  test_median
Uebung5/Finn/uebung05_min/release-build/Testing/Temporary/: CTestCostData.txt
Uebung5/release-build/: CMakeCache.txt  Makefile  cmake_install.cmake  normal  readvector  uniform
Uebung6/: Aufgabe_1.cpp  CMakeLists.txt  Polygon.cpp  point.cc  point.hh  polygon.cc  polygon.hh  uebung06.tar.xz
Uebung6/uebung06/: Aufgabe_1  Aufgabe_1.cpp  Aufgabe_2.cpp  CMakeLists.txt  canvas.cc  canvas.hh  point.cc  point.hh  polygon.cc  polygon.hh  testcorners.cpp
Uebung7/: v
Uebung7/Abgabe_Kathi_Finn_Moritz/: votieren.txt
Uebung7/Abgabe_Kathi_Finn_Moritz/Aufgabe_1/: Aufgabe_1.cc  CMakeLists.txt  point.hh  test_1D.cc  test_3D.cc
Uebung7/Abgabe_Kathi_Finn_Moritz/Aufgabe_2/: test_mean.cc  test_median.cc
Uebung7/Aufgabe_2/: CMakeLists.txt  statistics.hh  statisticsdriver.cc
Uebung8/: .Aufgabe1.cc.swp  Aufgabe1.cc  IterationResult.hh
Uebung8/Abgabe_Finn_Kathi_Moritz/: point.hh  votieren.txt
